--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@ left:250;
 }
 #about_me{
 position:absolute;
-top:50px;
+top:70px;
 left:350;
 }
 
@@ -29,29 +29,36 @@ top:100px;
 left:350;
 }
 
-#gmail{
+#insta{
 position:absolute;
 top:250px;
-left:400;
+left:250;
+}
+
+
+#gmail{
+position:absolute;
+top:350px;
+left:380;
 }
 
 #contact_me{
 position:absolute;
-top:350px;
-left:400;
+top:450px;
+left:250;
 }
 a:link, a:visited {
 		display:block;
 	width:220px;
 	font-weight:bold;
-	color:#FF007F;
+	color:	#98FB98;
 	text-align:center;
 	text-decoration:none;
 	text-transform:uppercase;
 	font-size:28px;
 }
 a:hover, a:active {
-	color:#ffa8a8;
+	color:#FFFFFF;
 	text-decoration:none;
 	font-size:28px;
 }
