--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,19 @@
 <html>
 
 <head>
-<link rel=stylesheet type= text/css href="style.css">
+<link rel=stylesheet type= text/css href="/static/style.css">
 <h1> </h1>
 </head>
 
 
 <body>
-<img src="/home/yara16/Desktop/Yara-designstyle-candy-m.png"> <br><br>
+<img src="http://logocache.com/custom-design/logo-name/Yara-designstyle-candy-m.png"> <br><br>
 
 <body>
 <nav>
-<a class="a1" href="home.html"> Home</a>
-<a class="a2" href="about_me.html"> About Me</a>
-<a class="a3" href="contact_me.html"> Contact Me</a>
+<a class="a1" href="/home"> Home</a>
+<a class="a2" href="/about_me"> About Me</a>
+<a class="a3" href="/contact_me"> Contact Me</a>
 </nav><br> <br>
 
 <p> Hi,I'm Yara Abu Khdeir,I'm a 16 years old,Palestinian,Muslim girl <br>I live in shufat,I study in rosary Sisters' School-beit hanina.<br>
